<?xml version="1.0"?>
<package format="2">
    <name>aiimooc_syz5</name>
    <version>0.0.1</version>
    <description>The mapping package</description>
    <maintainer email="suyun_zheng@163.com">sasaki</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <build_depend>pcl_conversions</build_depend>
    <build_depend>message_filters</build_depend>

    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>eigen</build_depend>



    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>message_filters</exec_depend>

    <exec_depend>libpcl-all</exec_depend>
    <exec_depend>eigen</exec_depend>

    <export>
    </export>
</package>
