<?xml version="1.0"?>
<package>
  <name>week6homework</name>
  <version>0.0.1</version>
  <description>The keypoint  package</description>


  <maintainer email="suyun_zheng@163.com">adam</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
